tests/machine/x/cpp/cross_join_filter.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <any>
#include <iostream>
#include <string>
#include <vector>

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}

struct Pair {
  decltype(n) n;
  decltype(l) l;
};
int main() {
  std::vector<int> nums = {1, 2, 3};
  auto letters = std::vector<std::any>{std::string("A"), std::string("B")};
  std::vector<Pair> pairs = ([&]() {
    std::vector<Pair> __items;
    for (auto n : nums) {
      for (auto l : letters) {
        if (!(((n % 2) == 0)))
          continue;
        __items.push_back(Pair{n, l});
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Even pairs ---") << std::endl;
  for (auto p : pairs) {
    {
      std::cout << p.n;
      std::cout << ' ';
      std::cout << p.l;
      std::cout << std::endl;
    }
  }
  return 0;
}
